Enhance ADC scoring with SIMD Vector API and add comprehensive tests
Signed-off-by: An Jinwon <ajw711@naver.com>